[tool.poetry]
name = "zigbee2mqtt"
version = "0.0.0"
description = "Python client for Zigbee2MQTT."
authors = ["Franck Nijhof <opensource@frenck.dev>"]
maintainers = ["Franck Nijhof <opensource@frenck.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/frenck/python-zigbee2mqtt"
repository = "https://github.com/frenck/python-zigbee2mqtt"
documentation = "https://github.com/frenck/python-zigbee2mqtt"
keywords = ["zigbee", "zigbee2mqtt", "z2m", "mqtt", "client"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "zigbee2mqtt", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.0"

[tool.poetry.dev-dependencies]
black = "^22.10"
blacken-docs = "^1.12.1"
coverage = {version = "^6.5", extras = ["toml"]}
flake8 = "^4.0.1"
flake8-docstrings = "^1.6.0"
isort = "^5.10.1"
mypy = "^0.991"
pre-commit = "^2.20.0"
pre-commit-hooks = "^4.4.0"
pylint = "^2.15.8"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.2"
pytest-cov = "^4.0.0"
yamllint = "^1.28.0"
pyupgrade = "^3.3.0"
flake8-simplify = "^0.19.3"
vulture = "^2.6"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^22.10.27"
flake8-builtins = "^2.0.1"
flake8-comprehensions = "^3.10.1"
flake8-eradicate = "^1.4.0"
flake8-markdown = "^0.3.0"
darglint = "^1.8.1"
safety = "^2.3.3"
codespell = "^2.2.2"
bandit = "^1.7.4"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/frenck/python-zigbee2mqtt/issues"
Changelog = "https://github.com/frenck/python-zigbee2mqtt/releases"

[tool.black]
target-version = ['py37']

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
branch = true
source = ["zigbee2mqtt"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pylint.MASTER]
extension-pkg-whitelist = [
  "pydantic"
]
ignore= [
  "tests"
]

[tool.pylint.BASIC]
good-names = [
    "_",
    "ex",
    "fp",
    "i",
    "id",
    "j",
    "k",
    "on",
    "Run",
    "T",
]

[tool.pylint.DESIGN]
max-attributes = 8

[tool.pylint."MESSAGES CONTROL"]
disable= [
    "format",
    "unsubscriptable-object",
]

[tool.pylint.SIMILARITIES]
ignore-imports = true

[tool.pylint.FORMAT]
max-line-length=88

[tool.pytest.ini_options]
addopts = "--cov"

[tool.vulture]
min_confidence = 80
paths = ["src", "tests"]
verbose = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
